--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,7 @@ body {
     background-color: #C3D4DE;
 }
 
-.col-sm-6 {
-    border:1px solid black;
-}
+
 
 .alert-primary {
     background-color: #002244;
@@ -26,4 +24,5 @@ body {
 
 #currentWord {
     font-size: 28px;
+    letter-spacing: 12px;
 }
