--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 .jumbotron {
     background-color: #111111;
     padding-top: 0px;
+    margin-bottom: 10px;
     height: 220px;
 }
 
@@ -10,7 +11,7 @@
 }
 
 .panel-default {
-    height: 320px;
+    height: 310px;
 }
 
 .panel-default > .panel-heading {
@@ -20,7 +21,6 @@
 
 .panel-photos {
     display: block;
-    padding: 0px;
     margin: 0 auto;
 }
 
